--- a/Spotify/index.html
+++ b/Spotify/index.html
@@ -18,11 +18,41 @@
     <div class="container">
         <div class="songList">
             <h1>Best of NCS - No Copyright Sounds</h1>
-            <div>
+            <div class="songItemContainer">
                 <div class="songItem">
-                    <img src="covers/1.jpg" alt="1">
-                    <span>Let me love you</span>
-                    <span class="songListplay"><span>05:34</span> <i class = "far fa-3x fa-play-circle"></i></span>
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="1" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="2" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="3" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="4" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="5" class="far songItemPlay fa-play-circle"></i> </span></span>
+                </div>
+                <div class="songItem">
+                    <img alt="1">
+                    <span class="songName">Let me Love You</span>
+                    <span class="songlistplay"><span class="timestamp">05:34 <i id="6" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
             </div>
         </div>
@@ -30,16 +60,18 @@
     </div>
 
     <div class="bottom">
-        <input type="range" name="range" id="myProgressBar" min = "0" max= "100">
+        <input type="range" name="range" id="myProgressBar" min = "0" value = "0" max= "100">
         <div class="icons">
-            <!-- <i class="fas fa-step-forward"></i> -->
-            <i class = "fas fa-3x fa-step-backward"></i>
-            <i class = "far fa-3x fa-play-circle"></i>
-            <i class = "fas fa-3x fa-step-forward"></i>
+            <i class = "fas fa-3x fa-step-backward" id = "previous"></i>
+            <i class = "far fa-3x fa-play-circle" id="masterPlay"></i>
+            <i class = "fas fa-3x fa-step-forward" id = "next"></i>
             <!-- fontawesome icons -->
         </div>
+        <div class="songInfo">
+            <img src="playing.gif" width="42px" alt="" id="gif"> <span id="masterSongName">Warriyo - Mortals [NCS Release]</span>
+        </div>
     </div>
+    <script src = "script.js"></script>
     <script src="https://kit.fontawesome.com/26504e4a1f.js" crossorigin="anonymous"></script>
-    <script> src = "script.js"</script>
 </body>
 </html>
